<resources>
    <string name="app_name">EventApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_too_short_username">Username is too short</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_event_list">Events</string>
    <string name="title_event_detail">Event Detail</string>
    <string name="username">Username</string>
    <string name="title_activity_events">Events</string>
    <string name="wrong_credentials">Username or password is wrong</string>
    <string name="register_button">Register</string>
    <string name="register">Register</string>
    <string name="mail">E-Mail</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="password">Password</string>
    <string name="zipCode">Postal Code</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="phone">Phone</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->


    <!-- Strings related to an Event -->
    <string name="eventName">Event Name</string>
    <string name="create">Create</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pick_start_date">Pick Start Date</string>
    <string name="pick_start_time">Pick Start Time</string>
    <string name="event_from">from</string>
    <string name="event_to">to</string>
    <string name="eventDescription">describe your event</string>
    <string name="eventImage">choose Event Image</string>
    <string name="pick_end_date">Pick End Date</string>
    <string name="pick_end_time">Pick End Time</string>
    <string name="eventIsPrivateEvent">private Event</string>
    <string name="title_activity_event_location_maps">Event Location</string>
    <string name="placePickerHint">number of attending people</string>
    <string name="save">save changes</string>
    <string name="action_search">search</string>
    <string name="app_label">EventApp</string>
    <string name="search_hint">Search Event</string>
    <string name="search_title">Search</string>
    <string name="new_event">New Event</string>
    <string name="action_nearest">nearest</string>
    <string name="action_delete">delete</string>
    <string name="action_register">Register</string>
    <string name="action_save">save</string>
</resources>
