<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/searchEventView"
          android:title="@string/search_title"
          android:icon="@drawable/ic_search_white_24dp"
          app:showAsAction="collapseActionView|ifRoom" app:actionViewClass="android.widget.SearchView"/>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item
            android:id="@+id/action_nearest"
            android:title="@string/action_nearest"
            android:icon="@drawable/ic_sort_white_24dp"
            app:showAsAction="ifRoom">
    </item>
</menu>
